--- a/README.mkd
+++ b/README.mkd
@@ -3,7 +3,7 @@ Description
 
 _CxALite_ is a lightweight java library allowing users to couple
 concurrent process as describe in [Complex
-Automata]{http://www.complex-automata.org/} (CxA) theory. It is particularly
+Automata](http://www.complex-automata.org/) (CxA) theory. It is particularly
 suited for scientific computing to parallelize and couple multi-scale
 and multi-science models. In its current implementation, _CxALite_
 works only on shared-memory machines (multi-core and/or multi-cpu).
@@ -16,7 +16,7 @@ _CxALite_ was written to match strictly the CxA execution model described in
   Science Series (to be published).
 
 Another open source implementation of CxA called
-[_MUSCLE_]{http://muscle.berlios.de/} (Multiscale Coupling Library and
+[_MUSCLE_](http://muscle.berlios.de/) (Multiscale Coupling Library and
 Environment) is available also. MUSCLE is _CxALite_ big brother and has the following advantages:
 
   * MUSCLE allows to couple code written in Java, C, C++ and
@@ -38,7 +38,7 @@ License and ownership
 
 _CxALite_ is an free open source library released under GNU GPLv3 license
 (see the LICENSE file included in the bundle). It was developped during
-EU founded research project [COAST]{http://www.complex-automata.org/}. 
+EU founded research project [COAST](http://www.complex-automata.org/). 
 
 Copyright University of Geneva (Jean-Luc Falcone), 2009. All rights reserved.
 
@@ -56,7 +56,7 @@ There is only one requirement:
 _CxALite_ will thus work on every machine with a valid java
 installation (Linux, MacOSX, Solaris, Windows, etc.)
 
-Additionaly, you will need to install the [ant]{http://ant.apache.org/} tool if
+Additionaly, you will need to install the [ant](http://ant.apache.org/) tool if
 you want to build it from source.
 
 Download
@@ -115,8 +115,8 @@ Support and Collaboration
 
 You can get help through the following methods:
 
-* Read the project [wiki](http://wiki.github.com/paradigmatic/facade/)
-* Open an entry in the project [issue tracker](http://github.com/paradigmatic/facade/issues)
+* Read the project [wiki](http://wiki.github.com/paradigmatic/CxALite/)
+* Open an entry in the project [issue tracker](http://github.com/paradigmatic/CxALite/issues)
 * Email the project maintainer: jean-luc[dot]falcone[at]unige[dot]ch
 
 Do not hesitate to send critics and feature requests.
