More checks at cxa initialization

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+== Pending changes ==
+
+  Improvements:
+    - More checks at initialization to detect layout errors
+ 
+
 == CxALite 0.1.0 == (2009-09-05)
 
   First serious release.
