--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
-== Pending changes ==
+== Recent changes ==
 
   Improvements:
     - More checks at initialization to detect layout errors
- 
+    - Property XML file reader
 
 == CxALite 0.1.0 == (2009-09-05)
 
